fix carousel image scroll marker click, hide scrollbar

--- a/packages/coffee.chealt.com/src/components/you/collections/item/images/images.css
+++ b/packages/coffee.chealt.com/src/components/you/collections/item/images/images.css
@@ -9,6 +9,7 @@
   flex-direction: row;
   align-items: center;
   overflow-y: hidden;
+  scrollbar-width: none;
 }
 
 .carousel > * {
